<?xml version="1.0"?>
<package format="2">
  <name>astrall_ros1</name>
  <version>0.1.0</version>
  <description>ROS Noetic driver wrapper for the Astrall SDK.</description>
  <maintainer email="user@example.com">Astrall SDK User</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <exec_depend>ffmpeg</exec_depend>
  <exec_depend>fast_lio</exec_depend>
  <exec_depend>lio_sam</exec_depend>
  <exec_depend>rslidar_sdk</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <export/>
</package>
